--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "author": "Raphael Menezes de Jesus",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
